# scales_py

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: api.md  index.md
scales/: __init__.py  _colors.py  _palettes_data.py  _utils.py  bounds.py  breaks.py  breaks_log.py  colour_manip.py  colour_mapping.py  colour_ramp.py  labels.py  minor_breaks.py  palettes.py  range.py  scale_continuous.py  scale_discrete.py  transforms.py
scales/_biobabel/: __init__.py  package.yaml  skill.md
scales/_biobabel/anti_patterns/: calling_palette_factory_at_data_site.yaml  log_trans_on_zero_or_negative.yaml  static_breaks_when_callable_expected.yaml
scales/_biobabel/concepts/: formatter.yaml  out_of_bounds.yaml  palette.yaml  range.yaml  transform.yaml
scales/_biobabel/examples/: smoke.py
scales/_biobabel/idioms/: palette_factory_then_call.yaml  percent_dollar_formatters.yaml  transform_breaks_labels_combo.yaml
scales/_biobabel/recipes/: log_axis.py  viridis_swatch.py
site/: 404.html  api.html  index.html  objects.inv
site/search/: search_index.json
tests/: conftest.py  test_b1_b2_b3_r_parity.py  test_b4_b6_r_parity.py  test_b5_b8_r_data.py  test_bounds.py  test_breaks.py  test_colour_manip.py  test_colour_mapping.py  test_colour_ramp_lab.py  test_coverage_labels.py  test_coverage_minor.py  test_coverage_misc.py  test_coverage_palettes.py  test_coverage_transforms.py  test_labels.py  test_palettes.py  test_r_parity.py  test_range.py  test_remaining_validated.py  test_scale_continuous.py  test_transforms.py  test_utils.py
validation/: _recorder.py
