[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scales-py"
version = "0.1.0"
description = "Python port of the R scales package — scale functions for visualization"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.6",
    "pandas>=1.5",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff"]
docs = ["mkdocs", "mkdocstrings[python]", "mkdocs-material", "mkdocs-jupyter"]

[tool.hatch.build.targets.wheel]
packages = ["scales"]

[tool.pytest.ini_options]
testpaths = ["tests"]
