[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scales-py"
version = "1.4.0.9000-04fc333"
description = "Python port of the R scales package — scale functions for visualization"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.6"]
dev = ["pytest", "pytest-cov", "ruff", "matplotlib>=3.6"]
docs = ["mkdocs", "mkdocstrings[python]", "mkdocs-material", "mkdocs-jupyter"]

[tool.hatch.build.targets.wheel]
packages = ["scales"]

[tool.pytest.ini_options]
testpaths = ["tests"]
