[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scales-python"
version = "1.4.0.9000"
description = "Python port of the R scales package (tracks R scales 1.4.0.9000)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Jeffery Liu", email = "jeffliu.lucky@gmail.com" },
]
keywords = [
    "scales",
    "ggplot2",
    "R-port",
    "visualization",
    "colour-palettes",
    "breaks",
    "transforms",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "build", "twine"]
docs = [
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-material",
    "mkdocs-jupyter",
]

[project.urls]
Homepage      = "https://github.com/Bio-Babel/scales_py"
Repository    = "https://github.com/Bio-Babel/scales_py"
Issues        = "https://github.com/Bio-Babel/scales_py/issues"
Documentation = "https://github.com/Bio-Babel/scales_py#readme"

[tool.hatch.build.targets.wheel]
packages = ["scales"]

[tool.hatch.build.targets.sdist]
exclude = [
    "tutorials/",
    "docs/",
    "tests/",
    "site/",
    "mkdocs.yml",
    ".github/",
    "*.egg-info/",
    "build/",
    "dist/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
